upgrade maven dependencies