@@ -14,17 +14,17 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 
         <jmh.version>1.34</jmh.version>
         <mysql.version>8.0.28</mysql.version>
         <jooq.version>3.16.4</jooq.version>
         <mysql.driver>com.mysql.jdbc.Driver</mysql.driver>
         <clickhouse.driver>ru.yandex.clickhouse.ClickHouseDriver</clickhouse.driver>
-        <org.springframework.version>5.3.15</org.springframework.version>
+        <org.springframework.version>5.3.16</org.springframework.version>
 
-        <slf4j.version>1.7.35</slf4j.version>
+        <slf4j.version>1.7.36</slf4j.version>
         <log4j.version>2.17.1</log4j.version>
         <netty.version>4.1.74.Final</netty.version>
         <quartz.version>2.3.2</quartz.version>
@@ -38,9 +38,9 @@
         <platform.classifier>linux-x86_64</platform.classifier>
         <spotbugs-maven-plugin.version>4.5.3.0</spotbugs-maven-plugin.version>
         <vertx.version>4.2.5</vertx.version>
-        <grpc.version>1.44.0</grpc.version>
+        <grpc.version>1.44.1</grpc.version>
         <opentelemetry.version>1.11.0</opentelemetry.version>
-        <spring-integration.version>5.5.8</spring-integration.version>
+        <spring-integration.version>5.5.9</spring-integration.version>
     </properties>
 
     <reporting>
@@ -64,13 +64,13 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-        <!-- Binding for Log4J -->
+
         <!-- dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>${log4j.version}</version>
         </dependency -->
-        <!-- Log4j API and Core implementation required for binding -->
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -480,10 +480,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!--
-            Core utilities used by other modules.
-            Define this if you use Spring Utility APIs (org.springframework.core.*/org.springframework.util.*)
-        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -496,50 +492,30 @@
             </exclusions>
         </dependency>
 
-        <!--
-            Expression Language (depends on spring-core)
-            Define this if you use Spring Expression APIs (org.springframework.expression.*)
-        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-expression</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
 
-        <!--
-            Bean Factory and JavaBeans utilities (depends on spring-core)
-            Define this if you use Spring Bean APIs (org.springframework.beans.*)
-        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
 
-        <!--
-            Application Context (depends on spring-core, spring-expression, spring-aop, spring-beans)
-            This is the central artifact for Spring's Dependency Injection Container and is generally always defined
-        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
 
-        <!--
-            Various Application Context utilities, including EhCache, JavaMail, Quartz, and Freemarker integration
-            Define this if you need any of these integrations
-        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
             <version>${org.springframework.version}</version>
         </dependency>
 
-        <!--
-            JDBC Data Access Library (depends on spring-core, spring-beans, spring-context, spring-tx)
-            Define this if you use Spring's JdbcTemplate API (org.springframework.jdbc.*)
-        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -562,6 +538,13 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${org.springframework.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -805,6 +788,18 @@
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-core</artifactId>
             <version>${dl4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.freemarker</groupId>
+                    <artifactId>freemarker</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
         </dependency>
 
 
@@ -848,6 +843,21 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.0</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
             <!-- https://mvnrepository.com/artifact/com.fizzed/rocker-maven-plugin -->
             <plugin>
                 <groupId>com.fizzed</groupId>
